# recipes

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  setup.cfg
public/: index.html
scripts/: setup.sh
src/: main.py
src/models/: __init__.py  _common.py  ingredient.py  recipe.py  recipe_ingredient.py  recipe_ingredient_to_recipe_link.py
src/models/types/: __init__.py  decimal.py  unit.py
src/routers/: __init__.py  _tags.py  http-client.env.json
src/routers/filestore/: __init__.py  router.py
src/routers/foo/: helpers.py  router.py
src/routers/ingredient/: __init__.py  crud.py  helpers.py  push.http  router.py
src/routers/recipe/: crud.py  router.py
src/routers/recipe_ingredient/: __init__.py  crud.py  router.py
src/utils/: __init__.py  env.py  exception_handlers.py  filestore.py  logger.py  paths.py  session.py
src/utils/responses/: __init__.py  error.py  success.py
